2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/stepmake/po-vars.make: test change for GIT gateway.

2006-10-22  Jürgen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/examples.itely (Transcription of mensural
	music): Added more comments in .ly source.  Suggest to remove
	Forbid_line_break_engraver to allow line breaking at all bars.

	* Documentation/user/instrument-notation.itely (Ancient
	articulations): Updated @refbugs regarding episem.

	* Documentation/user/instrument-notation.itely (Gregorian square
	neumes ligatures): Added \augmentum dots.  Updated @refbugs
	regarding \augmentum.

	* input/test/gregorian-scripts.ly: Removed obsolete TODOs.

	* input/test/ligature-vaticana.ly: Added \augmentum dots.  Updated
	comment.

	* lily/vaticana-ligature-engraver.cc: Added TODO comment for
	\augmentum dots.

	* ly/gregorian-init.ly: Added \augmentum macro.

2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/gregorian-ligature-engraver.cc (fix_prefix): const correctness.

	* lily/pango-font.cc (pango_item_string_stencil): use
	FT_Get_X11_Font_Format()

2006-10-22  John Mandereau  <john.mandereau@free.fr>

	* po/fr.po: update translation.

2006-10-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump version

	* input/regression/horizontal-bracket-break.ly: new file.

	* scm/define-grobs.scm (all-grob-descriptions): calc
	connect-to-neighbor. 

	* lily/horizontal-bracket.cc (make_bracket): support
	connect-to-neighbor.  Fix #118

	* VERSION: release 2.9.26-2

	* lily/ttf.cc (make_index_to_charcode_map): remove debugging gobs.

	* VERSION (PACKAGE_NAME): release 2.9.26

	* buildscripts/output-distance.py (test_basic_compare): add
	multipage test.
	(FileLink.multi_img_cell): new function, glob multi-page png
	images.

2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* po/lilypond.pot: update.

	* Documentation/topdocs/NEWS.tely (Top): remove TODOs.

	* Documentation/user/global.itely (File structure): remove