@@ -1,3 +1,7 @@
+2006-10-23  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* flower/polynomial.cc (check_sol): no empty if bodies. 
+
 2006-10-22  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* stepmake/stepmake/po-vars.make: test change for GIT gateway.
